# libsim

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  AUTHORS  Makefile.am  README  README.md  configure.ac  libsim.pc.in  libsim.spec  testenv
alchimia/: Makefile  Makefile.am  alchimia.F03  alchimia.F90  alchimia_full_2003.F03  forno.F03  forno.F90  kinds.F90  main.F90  missing_values.f90  pentolone.F03  pentolone.F90
astrolib/: astrolib.f90  phis_const.f90
base/: Makefile.am  array_utilities.F90  array_utilities_inc.F90  array_utilities_pre.F90  arrayof_post.F90  arrayof_post_nodoc.F90  arrayof_pre.F90  arrayof_pre_nodoc.F90  char_utilities.F90  char_utilities.f90  char_utilities_test.f90  datetime_class.F90  datetime_class.f90  datetime_test.f90  err_handling.f90  file_utilities.F90  file_utilities.f90  file_utilities_test.f90  for2r.f90  geo_coord_class.F90  geo_coord_class.f90  geo_coord_with_utm_class.F90  geo_coordvect_class.f90  geo_grid_class.f90  geo_proj_class.F90  geo_transforms.f90  georef_coord_class.F90  getopt_m.f90  io_units.F90  io_units.f90  kinds.F90  kinds.f90  list_abstract.F03  list_abstractforchar.F03  list_byte.F03  list_character.F03  list_doubleprecision.F03  list_integer.F03  list_link.F03  list_linkchar.F03  (+15 more)
base/kdtree2.31/: Makefile
base/kdtree2.31/src-f90/: Makefile
data/: 18.ana  Makefile.am  Query_MacroArea.sql  Query_da_idrete_a_descr.sql  Query_da_idrete_a_simana.sql  Query_reti.sql  Script_Principale.bash  climaprec.bufr  climaprec.v7d  crea_anag_macro_aree.bash  crea_anag_reti.bash  crea_anag_reti_simana.bash  example_temp.bufr  in.bufr  in.grb  libsim_gen_ana_ora.sh  libsim_gen_var_ora.sh  libsim_gen_varconv_ora.py  macroaree_er.shp  macroaree_er.shx  net_001.simana  net_002.simana  net_003.simana  net_004.simana  net_005.simana  net_006.simana  net_007.simana  net_008.simana  net_009.simana  net_010.simana  net_011.simana  net_012.simana  net_013.simana  net_014.simana  net_015.simana  net_017.simana  net_018.simana  net_019.simana  net_020.simana  net_021.simana  (+41 more)
debian/: README.Debian  changelog  control  copyright  libsim_debian.patch  postinst  postrm  rules
doc/: API_DB-All.e_Fortran2003.odp  Doxyfile.in  Makefile.am  breve_presentazione.odp  footer.html  fpp  mainpage.dox  relazione_qc.odt  space_transform.dox  v7d_transform_tut.dox  volgrid6d_dia.odg
doc/vol7d/: Diagram1.dia  Diagram1.eps  Diagram1.fig  Diagram1.ps  vol7d.ps
examples/: Makefile.am  esempio_file_utilities.f90  esempio_geo_coordvect.f90  esempio_impgrib.f90  esempio_qc_convert.f90  esempio_qccli.f90  esempio_regrib.f90  esempio_termolib.f90  esempio_v7d.f90  esempio_v7d_compute.f90  esempio_v7ddballe.f90  esempio_v7ddballe_export.f90  esempio_v7ddballe_export_file.f90  esempio_v7ddballe_import_export.f90  esempio_v7ddballe_import_file.f90  esempio_v7ddballe_move_and_collapse.f90  esempio_v7ddballe_multi.f90  esempio_v7dnetcdf.f90  esempio_v7doracle.f90  esempio_v7doracle_multi.f90  example_alchimia.f03  example_alchimiav7d.f03  example_alchimiavg6d.f03  example_char_utilities.f90  example_dballe.F03  example_dballe_read_list.F03  example_dballe_read_real.F03  example_dballe_read_reallist.F03  example_dballe_read_vector.F03  example_for2r.f90  example_getopt.f90  example_list.F03  example_ncarg_sounding.f90  example_optionparser.F90  example_simple_stat.f90  example_space_utilities.F90  example_v7ddballe_v7d2dba.f90  example_v7ddballenew_dba2v7d.f90  example_vapor_interface.F03  example_vg6d_1.f90  (+32 more)
fedora/: libsim.spec
for2r/: for2r.f90
graphics/: Makefile.am  ncar_plot_class.F90
grib/: Makefile.am  dwdgrib1_io_class.F90  geo_grid.f90  geo_grid_class.f90  geo_grid_dwdgrib1.F90  geo_grid_grib.F90  geo_grid_grib.f90  geo_grid_grib_templ.F90  grib_grid.f90  grib_io.f90  grib_io_class.F90  grib_io_class.f90  grib_io_class_templ.F90  impgrib.f90  matchgrib.f90  matchgrib_class.f90
grid5d/: Makefile  demo.f90  grid.f90  grid6d_var_class.F90  gridinfo_class.f90  regular_ll.f90  rotated_ll.f90
grid6d/: Makefile  demo.f90  grid.f90  grid_class.f90  (+2 more)
log4fortran/: Makefile.am  log4fortran.F90  log4fortran.f90  log4fortran_c.c
qc/: Makefile.am  modqc.F90  modqc.f90  modqc_peel_util_include.F90  modqc_peeled_include.F90  modqc_peeling_include.F90  modqccli.F90  modqccli.f90  modqcspa.F90  modqctem.F90
termolib/: Makefile.am  phisical_constant.f90  termo.F03  termolib.f90  termolib_test.f90
vol7d/: Makefile.am  dballe_class.F03  dballe_test.F03  dballe_test.sh  dballe_test2.F03  dballe_test2.test  dballe_test3.F03  dballe_test3.test  dballe_test_copy1f.test  genericvar_mo.F90  oraclesim.c  stat_proc_engine.F90  stat_proc_engine.f90  vol7d_alchimia_class.F03  vol7d_ana_class.F90  vol7d_ana_class.f90  vol7d_class.F90  vol7d_class_compute.F90  vol7d_class_desc_templ.F90  vol7d_class_diff.F90  vol7d_class_diff_only.F90  vol7d_class_diff_only.f90  vol7d_class_get_vol.F90  vol7d_class_merge_final.F90  vol7d_class_remap.F90  vol7d_class_type_templ.F90  vol7d_dballe_class.F03  vol7d_dballe_class.F90  vol7d_dballe_class.f90  vol7d_dballe_class_ana.F90  vol7d_dballe_class_anaattr.F90  vol7d_dballe_class_attr.F90  vol7d_dballe_class_dati.F90  vol7d_dballe_class_datiattr.F90  vol7d_dballe_class_nana.F90  vol7d_dballe_class_nana.f90  vol7d_dballe_class_ndati.F90  vol7d_dballe_class_ndati.f90  vol7d_dballe_class_var.F90  vol7d_dballe_class_var_du.f90  (+28 more)
volgrid6d/: Makefile  Makefile.am  demo.f90  demo2.f90  demo3.f90  demo4.f90  gdal.f90  grid_class.F90  grid_class.f90  grid_dim_class.F90  grid_id_class.F90  grid_rect_class.F90  grid_transform_class.F90  grid_transform_test.f90  gridinfo_class.F90  gridinfo_class.f90  gridpar_generic_class.F90  gridpar_polarproj_class.F90  gridpar_rotated_class.F90  gridpar_stretched_class.F90  lambert_class.F90  log4crc  regular_ll.f90  regular_ll_class.F90  regular_ll_class.f90  rotated_ll.f90  rotated_ll_class.F90  rotated_ll_class.f90  vdf4f.F03  vdf4f_c.cpp  vdf4f_c.h  volgrid6d_alchimia_class.F03  volgrid6d_class.F90  volgrid6d_class.f90  volgrid6d_class_compute.F90  volgrid6d_vapor_class.F90  volgrid6d_var_class.F90
(+4 files in other folders)
