ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = fedora/SPECS/libsim.spec portability/conv_cpp.sh portability/README_aix AUTHORS testenv

# Execute make in subdirs
SUBDIRS = log4fortran base alchimia vol7d volgrid6d data qc termolib graphics bin examples doc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libsim.pc
